<resources>

	<!--  Global  -->
    <string name="app_name">JSavings</string>
	<string name="save">Save</string>
	<string name="next">Next</string>
	<string name="something_went_wrong">Something went wrong :(</string>
	<string name="ok">OK</string>
	<string name="no_internet">Ooops, no internet connection</string>
	<string name="retry">Retry</string>
	<string name="search">Search</string>
	<string name="settings">Settings</string>
	<string name="nothing_here">Ooops, nothing here</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<!--	-->


	<!--  Loading  -->
	<string name="loading_getting_currencies">Loading currencies</string>
	<string name="loading_getting_crypto_coins">Loading crypto coins</string>
	<string name="loading_saving_account">Saving account</string>
	<string name="loading_saving_wallet">Saving wallet</string>
	<string name="loading_saving_category">Saving transaction category</string>
	<string name="loading_saving_transaction">Saving transaction</string>
	<string name="loading_account">Loading account</string>
	<string name="loading_wallets">Loading wallets</string>
	<string name="loading_transactions">Loading transactions</string>
	<string name="loading_transaction_category">Loading transaction category</string>
	<string name="loading_transaction_categories">Loading transaction categories</string>
	<string name="loading_deleting_category">Deleting transaction category</string>
	<string name="loading_updating_category">Updating category</string>
	<string name="loading_getting_transactions">Loading transactions</string>
	<string name="loading_getting_transaction">Loading transaction</string>
	<string name="loading_deleting_transaction">Deleting transaction</string>
	<string name="loading_updating_transaction">Updating transaction</string>

    <!--  Navigation  -->
    <string name="title_transactions">Transactions</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_graph">Graph</string>
    <string name="title_wallets">Wallets</string>
    <string name="title_intro">Intro</string>
    <!--    -->



    <!--  Intro fragment  -->
    <string name="intro_jsavings">JSavings</string>
    <!--    -->

    
    
    <!--  Transaction fragment  -->
	<string name="total_balance">Total balance:&#160;</string>
        <!--  End of day  -->
        <string name="income_text">Income:</string>
        <string name="consumption_text">Consumption:</string>
        <string name="profit_text">Total:</string>
        <!--    -->
	<string name="text_description_fab">Add transaction</string>
	<!--	-->

	<!--  New transaction  -->
	<string name="new_transaction_hint_day">Day of transaction</string>
	<string name="new_transaction_hint_time">Time of transaction</string>
	<string name="new_transaction_hint_sum">Sum of transaction</string>
	<string name="new_transaction_hint_type">Type of transaction</string>
	<string name="new_transaction_hint_category">Category of transaction</string>
	<string name="new_transaction_hint_from_wallet">From wallet</string>
	<string name="new_transaction_hint_to_wallet">To wallet</string>
	<string name="new_transaction_hint_commission">Commission</string>
	<string name="new_transaction_hint_description">Description</string>
	<string name="new_transaction_save">Save</string>
	<string name="transaction_type_income">Income</string>
	<string name="transaction_type_consumption">Consumption</string>
	<string name="transaction_type_transfer">Transfer</string>
	<string name="new_transaction_error_future_time">Transaction can not be in future</string>
	<string name="new_transaction_error_category_empty">Category must be chosen</string>
	<string name="new_transaction_error_wallet_empty">Wallet was not selected</string>
	<string name="new_transaction_error_sum_empty">Transaction sum must not be empty</string>
	<string name="new_transaction_error_sum_invalid">Transaction sum is in invalid format</string>
	<string name="new_transaction_error_low_balance">The balance on the wallet is not enough to record this transaction</string>
	<string name="update_transaction">Update transaction</string>

	<!--  Transaction info  -->
	<string name="transaction_date">Date</string>
	<string name="transaction_category">Category</string>
	<string name="transaction_to_wallet">To wallet</string>
	<string name="transaction_from_wallet">From wallet</string>
	<string name="transaction_sum">Sum</string>
	<string name="transaction_type">Type</string>
	<string name="edit_transaction">Edit transaction</string>
	<string name="delete_transaction">Delete transaction</string>
	<string name="delete_transaction_question">Are you sure you want to delete this transaction?</string>
    
    <!--  Account  -->
		<string name="balance">Balance:&#160;</string>
    <!--  Add new account name fragment  -->
        <string name="add_new_account">Add new account</string>
        <string name="choose_name_for_new_account">Choose a name for your new account</string>
        <string name="hint_input_new_account_name">Name</string>
		<string name="error_new_account_name_is_exists">Account with the same name already exists</string>
    <!--    -->
	<!--  Choose currency for new account fragment  -->
		<string name="choose_preferred_currency_new_account">Choose currency</string>
		<string name="what_currency_prefer_new_account">What currency do you prefer the most?</string>
		<string name="regular_currency">Regular currency</string>
		<string name="note">Note: The selected currency will be used as the denomination for this account. For your convenience all your savings will be transferred into this currency according to the current exchange rate. You will be able to change it in the future.</string>
		<string name="cryptocurrency">Cryptocurrency</string>
		<string name="error_new_account_currency_is_invalid">Chosen currency does not match any in available list</string>
	<!--	-->
	<!--  Starting balance new account  -->
		<string name="starting_balance_new_account">Starting balance</string>
		<string name="how_much_money_new_account">How much money do you have?</string>
		<string name="skip">Skip</string>
	<!--	-->
	<!--  Create new wallet  -->
	<string name="new_account_create_new_wallet">Now create your first wallet</string>
	<!--    -->
	<!--  Ready  -->
	<string name="new_account_ready_to_start">Now everything is ready and you can start using JSavings</string>
	<!--	-->



	<!--  wallet  -->
	<!--  wallet type  -->
		<string name="wallet_type_cash">Cash</string>
		<string name="wallet_type_debit_card">Debit card</string>
		<string name="wallet_type_credit_card">Credit card</string>
		<string name="wallet_type_crypto_currency">Crypto currency</string>
		<string name="wallet_type_precious_metal">Precious metal</string>
		<string name="wallet_type_securities">Securities</string>
	<!--	-->
	<!--  Add new wallet  -->
		<string name="new_wallet_name">Name</string>
		<string name="new_wallet_name_hint">New wallet name</string>
		<string name="new_wallet_type">Type</string>
		<string name="new_wallet_starting_balance">Starting balance</string>
		<string name="new_wallet_color">Color</string>
		<string name="new_wallet_icon">Choose icon</string>
		<string name="new_wallet_currency">Currency</string>
		<string name="new_wallet_choose_color">Choose color</string>

		<string name="new_wallet_error_currencies_load">Currencies was not loaded</string>
		<string name="new_wallet_error_crypto_coins_load">Crypto coins was not loaded</string>

		<string name="new_wallet_error_name_empty">Wallet\'s name must not be empty</string>
		<string name="new_wallet_error_type_empty">Wallet\'s type must not be empty</string>
		<string name="new_wallet_error_starting_balance_invalid">Wallet\'s starting balance is invalid</string>
		<string name="new_wallet_error_currency_empty">Wallet\'s currency must not be empty</string>
		<string name="new_wallet_error_currency_wrong">Wallet\'s currency must be valid according to provided list</string>

		<string name="new_wallet_credit_error_limit_empty">Wallet\'s credit limit must not be empty</string>
		<string name="new_wallet_credit_error_rate_empty">Wallet\'s credit interest rate must not be empty</string>
		<string name="new_wallet_credit_error_payment_day_empty">Wallet\'s credit payment day must not be empty</string>
		<string name="new_wallet_credit_error_grace_empty">Wallet\'s credit grace must not be empty</string>
	
	<!--  Credit wallet  -->
		<string name="new_wallet_credit_limit">Credit limit</string>
		<string name="new_wallet_percent">Interest rate</string>
		<string name="new_wallet_payment_day">Day of payment</string>
		<string name="new_wallet_grace_period">Grace period (days)</string>
		<string name="new_wallet_invalid_value_error">Invalid value</string>
	<!--	-->

	<!--  New transaction category  -->
	<string name="create_new_income_category">Create new income category</string>
	<string name="create_new_consumption_category">Create new consumption category</string>
	<string name="delete_category_question">Are you sure you want to delete this category?</string>
	<string name="update_category">Update category</string>
	<string name="new_category_name">Name</string>
	<string name="new_category_color">Color</string>
	<string name="new_category_type">Type</string>
	<string name="new_category_error_name_is_empty">Category name can not be empty</string>
	<string name="new_category_error_name_is_taken">Category with this name already exists</string>
	<string name="new_category_error_type_is_empty">Category type can not be empty</string>
	<!--	-->

</resources>