<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/bottom_nav_menu_transactions"
        android:icon="@drawable/ic_transaction_bottom_nav_menu"
        android:title="@string/title_transactions" />

    <item
        android:id="@+id/bottom_nav_calendar"
        android:icon="@drawable/ic_calendar_bottom_nav_menu"
        android:title="@string/title_calendar" />

    <item
        android:id="@+id/placeholder"
        android:title="" />

    <item
        android:id="@+id/bottom_nav_menu_graph"
        android:icon="@drawable/ic_graph_bottom_nav_menu"
        android:title="@string/title_graph" />

    <item
        android:id="@+id/bottom_nav_menu_purses"
        android:icon="@drawable/ic_purse_bottom_nav_menu"
        android:title="@string/title_purses" />

</menu>