<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<com.google.android.material.tabs.TabLayout
		android:id="@+id/tabLayout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<com.google.android.material.tabs.TabItem
			android:id="@+id/tab_income"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/transaction_type_income" />

		<com.google.android.material.tabs.TabItem
			android:id="@+id/tab_consumption"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/transaction_type_consumption" />

		<com.google.android.material.tabs.TabItem
			android:id="@+id/tab_transfer"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/transaction_type_transfer" />

	</com.google.android.material.tabs.TabLayout>

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/til_new_transaction_date_day"
		style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="@dimen/all_elements_separation"
		android:layout_marginTop="@dimen/all_elements_large_separation"
		android:hint="@string/new_transaction_hint_day"
		app:layout_constraintEnd_toStartOf="@+id/til_new_transaction_date_time"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/tabLayout">

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/tiet_new_transaction_date_day"
			style="@style/StandardTextStyle"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="none" />

	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/til_new_transaction_date_time"
		style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="@dimen/all_elements_separation"
		android:hint="@string/new_transaction_hint_time"
		android:layout_marginTop="@dimen/all_elements_large_separation"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@id/til_new_transaction_date_day"
		app:layout_constraintTop_toBottomOf="@+id/tabLayout">

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/tiet_new_transaction_date_time"
			style="@style/StandardTextStyle"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="none" />

	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/til_new_transaction_category"
		style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="@dimen/all_elements_separation"
		android:layout_marginTop="@dimen/all_elements_large_separation"
		android:hint="@string/new_transaction_hint_category"
		android:clickable="true"
		android:focusable="true"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/til_new_transaction_date_day">

		<androidx.appcompat.widget.AppCompatAutoCompleteTextView
			android:id="@+id/actv_new_transaction_category"
			style="@style/StandardTextStyle"
			android:enabled="false"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="none" />

	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/til_new_transaction_from_wallet"
		style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="@dimen/all_elements_separation"
		android:layout_marginTop="@dimen/all_elements_large_separation"
		android:hint="@string/new_transaction_hint_from_wallet"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/til_new_transaction_category">

		<androidx.appcompat.widget.AppCompatAutoCompleteTextView
			android:id="@+id/actv_new_transaction_from_wallet"
			style="@style/StandardTextStyle"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="none" />

	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/til_new_category_to_wallet"
		style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="@dimen/all_elements_separation"
		android:layout_marginTop="@dimen/all_elements_large_separation"
		android:hint="@string/new_transaction_hint_to_wallet"
		android:visibility="gone"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/til_new_transaction_from_wallet">

		<androidx.appcompat.widget.AppCompatAutoCompleteTextView
			android:id="@+id/actv_new_transaction_to_wallet"
			style="@style/StandardTextStyle"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" />

	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/til_new_transaction_sum"
		style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="@dimen/all_elements_separation"
		android:layout_marginTop="@dimen/all_elements_large_separation"
		android:hint="@string/new_transaction_hint_sum"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/til_new_category_to_wallet">

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/tiet_new_transaction_sum"
			style="@style/StandardTextStyle"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="numberDecimal" />

	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/til_new_transaction_description"
		style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="@dimen/all_elements_separation"
		android:layout_marginTop="@dimen/all_elements_large_separation"
		android:hint="@string/new_transaction_hint_description"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/til_new_transaction_sum">

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/tiet_new_transaction_description"
			style="@style/StandardTextStyle"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" />

	</com.google.android.material.textfield.TextInputLayout>

	<Button
		android:id="@+id/button_new_transaction_save"
		style="@style/ButtonTextStyle.Filled"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="@dimen/all_elements_separation"
		android:layout_marginTop="@dimen/all_elements_large_separation"
		android:text="@string/save"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/til_new_transaction_description" />

</androidx.constraintlayout.widget.ConstraintLayout>