<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<TextView
		android:id="@+id/text_starting_balance"
		style="@style/HeaderTextStyle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_margin="@dimen/add_new_account_elements_margin"
		android:text="@string/starting_balance_new_account"
		app:layout_constraintBottom_toTopOf="@+id/til_new_account_name"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent" />

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/til_new_account_name"
		style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="@dimen/add_new_account_elements_margin"
		app:endIconMode="custom"
		app:endIconDrawable="@drawable/ic_delete_symbol"
		app:endIconTint="?colorOnSurface"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<com.google.android.material.textfield.TextInputEditText
			style="@style/StandardTextStyle"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/how_much_money_new_account"
			android:inputType="numberDecimal" />

	</com.google.android.material.textfield.TextInputLayout>

	<Button
		android:id="@+id/button_new_account_skip"
		style="@style/ButtonTextStyle.Outlined"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/skip"
		app:layout_constraintEnd_toStartOf="@+id/button_new_account_next"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/til_new_account_name"
		android:layout_margin="@dimen/add_new_account_elements_margin"/>

	<Button
		android:id="@+id/button_new_account_next"
		style="@style/ButtonTextStyle.Outlined"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/next"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/til_new_account_name"
		app:layout_constraintStart_toEndOf="@+id/button_new_account_skip"
		android:layout_margin="@dimen/add_new_account_elements_margin"/>

</androidx.constraintlayout.widget.ConstraintLayout>